# hypercore-indexer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  hypercore.example.toml  install.sh
.github/workflows/: docker.yml  test.yml
deployments/hypercore-indexer-dev/: docker-compose.yml  init.sql
deployments/hypercore-indexer-test/: docker-compose.yml
examples/backfill-postgres/: README.md  docker-compose.yml  queries.sh
examples/live-hip4-clickhouse/: README.md  docker-compose.yml  queries.sh
examples/live-sqlite/: README.md  run.sh
scripts/: dev.sh  queries.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/decode/: hash.rs  mod.rs  system_tx.rs  types.rs
src/fills/: mod.rs  parser.rs  types.rs
src/hip4/: api.rs  decoder.rs  mod.rs  poller.rs  types.rs
src/live/: mod.rs  poll.rs  tip.rs
src/pipeline/: mod.rs  progress.rs  range.rs  worker.rs
src/s3/: client.rs  codec.rs  mod.rs
src/storage/: clickhouse.rs  mod.rs  postgres.rs  sqlite.rs
src/types/: block.rs  mod.rs
tests/: backfill_pipeline.rs  backfill_to_live.rs  decode_blocks.rs  fills_pipeline.rs  full_pipeline.rs  hip4_api.rs  hip4_e2e.rs  hip4_sqlite.rs  live_mode.rs  storage_clickhouse.rs  storage_postgres.rs  storage_sqlite.rs
tests/fixtures/: block_5000038.rmp.lz4  block_testnet_48186001.rmp.lz4  node_fills_sample.jsonl
tests/fixtures/hip4_range/: 48191995.rmp.lz4  48192000.rmp.lz4  48192001.rmp.lz4  48194499.rmp.lz4  48194500.rmp.lz4  48194501.rmp.lz4  48224999.rmp.lz4  48225000.rmp.lz4  48240000.rmp.lz4  48240001.rmp.lz4
tests/fixtures/range/: 5000035.rmp.lz4  5000036.rmp.lz4  5000037.rmp.lz4  5000039.rmp.lz4  5000040.rmp.lz4  5000041.rmp.lz4  5000042.rmp.lz4  5000043.rmp.lz4  5000044.rmp.lz4  5000045.rmp.lz4
