[package]
name = "hypercore-indexer"
version = "0.0.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
# AWS SDK — use rustls for TLS (no OpenSSL dependency)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
lz4_flex = "0.11"
rmp-serde = "1"
hex = "0.4"

# Custom serde structs are used for MessagePack deserialization because the
# wire format has quirks (tx_type as string, signature as positional list,
# integers serialized as big-endian bytes). The reth fork types are kept as
# a reference dependency for future use when we need RLP encoding or
# block validation.
#
# reth-primitives = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }
# reth-ethereum-primitives = { git = "https://github.com/hl-archive-node/reth", rev = "416c2e26756f1c8ee86e6b8e4081f434952b3a1a" }

alloy-primitives = { version = "1.3", features = ["serde"] }
tiny-keccak = { version = "2", features = ["keccak"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Storage — all use rustls for TLS consistency
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "bigdecimal"] }
clickhouse = { version = "0.14", default-features = false, features = ["lz4", "inserter", "rustls-tls", "time"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
time = "0.3"
